// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dollar-sign.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
$

\\$

\\\\$

\\\\\\$

=====================================output=====================================
$

\\$

\\\\$

\\\\\\$

================================================================================
`;

exports[`empty-block.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
$$
$$

=====================================output=====================================
$$
$$

================================================================================
`;

exports[`issue-12793.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
$ P\\Big(\\mathop{\\cup}\\limits^n_{i=1}A_i\\Big) = \\sum\\limits^n_{i=1}P(A_i) $

=====================================output=====================================
$ P\\Big(\\mathop{\\cup}\\limits^n_{i=1}A_i\\Big) = \\sum\\limits^n_{i=1}P(A_i) $

================================================================================
`;

exports[`issue-16664.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
$$ \\textrm{p-value} = 1 - \\sum_{x \\leq a} H(x | N, r_1, m_1) $$

=====================================output=====================================
$$ \\textrm{p-value} = 1 - \\sum_{x \\leq a} H(x | N, r_1, m_1) $$

================================================================================
`;

exports[`math-like.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
$10 - $20

Paragraph with $14 million.    But if more $dollars on the same line...

=====================================output=====================================
$10 - $20

Paragraph with $14 million.    But if more $dollars on the same line...

================================================================================
`;

exports[`remark-math.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- tests from https://github.com/Rokt33r/remark-math/blob/9e13e49/specs/remark-math.spec.js -->

$$
\\beta+\\gamma
$$

---

$\\alpha\\$

---

\\$\\alpha\\$

---

\\\\$\\alpha$

---

\`$\`\\alpha$

---

$\\alpha\`$\` foo

---

$\`\\alpha\`$

---

$\\alpha\\$$

---

$$
\\alpha\\$
$$

---

tango
$$
\\alpha
$$

---

$$\\\\alpha$$

---

$$\\alpha$$
$$
\\alpha\\beta
$$

---

> $$
> \\alpha\\beta
> $$

---

  $$$
    \\alpha
  $$$

---

$$  must
\\alpha
$$

---

$$
\\alpha
$$
\`\`\`
code fence
\`\`\`

=====================================output=====================================
<!-- tests from https://github.com/Rokt33r/remark-math/blob/9e13e49/specs/remark-math.spec.js -->

$$
\\beta+\\gamma
$$

---

$\\alpha\\$

---

\\$\\alpha\\$

---

\\\\$\\alpha$

---

\`$\`\\alpha$

---

$\\alpha\`$\` foo

---

$\`\\alpha\`$

---

$\\alpha\\$$

---

$$
\\alpha\\$
$$

---

tango

$$
\\alpha
$$

---

$$\\\\alpha$$

---

$$\\alpha$$

$$
\\alpha\\beta
$$

---

> $$
> \\alpha\\beta
> $$

---

$$
  \\alpha
$$

---

$$ must
\\alpha
$$

---

$$
\\alpha
$$

\`\`\`
code fence
\`\`\`

================================================================================
`;
